--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "reactstrap": "^5.0.0-alpha.4",
+    "redux": "^3.7.2",
     "typeface-roboto": "0.0.45"
   },
   "scripts": {
@@ -21,5 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
